[package]
name = "gst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
termcolor = "1.0.4"
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
reqwest = { version = "0.11", features = ["json", "blocking"] }
